# proj-leela

./: .env.template  .gitignore  ALTERNATIVE_METAPHORS.md  CLAUDE_OLD.md  CLI_USAGE_EXAMPLES.md  CONCEPTUAL_TERRITORIES_IMPLEMENTATION.md  DIALECTIC_SYSTEM_IMPLEMENTATION.md  Dockerfile  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TOOLS.md  META_SPIRAL_IMPLEMENTATION.md  Makefile  MetaDoc.md  PROJECT_PLAN.md  README.md  REBUILD_PREPARATION.md  alembic.ini  docker-compose.yml  init_db.py  pyproject.toml  run_server.py  test_integration.py  test_simple.py
alembic/: env.py  script.py.mako
data/: leela.db
docs/: cli.md  frontend_design.md  index.md  installation.md  quickstart.md
evaluation_results/: framework_evaluation_20250413_165318.json  framework_evaluation_20250413_171244.json  framework_evaluation_20250413_172725.json  spiral_evaluation_20250413_174012.json
examples/: generate_dialectic_idea.py  generate_eroded_idea.py  generate_idea.py  generate_territory_idea.py  test_connector.py
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
leela/: __main__.py  cli.py  config.py
prompts/: cognitive_dissonance_amplifier.txt  connected_idea.txt  connector_bridge_mechanism.txt  connector_conceptual_distance.txt  dialectic_synthesis.txt  dialectic_synthesis_integration.txt  disruptor_assumption_detection.txt  disruptor_idea_generation.txt  disruptor_inversion.txt  disruptor_paradox_generation.txt  domain_concept_generation.txt  erosion_force.txt  erosion_pattern.txt  erosion_timeframe.txt  (+25 more)
(+357 files in other folders)
